[tool.poetry]
name = "MAXOMOD"
version = "0.1.0"
description = "MAXOMOD Python dependencies"
authors = [
    "Sergio Oller <sergio.oller@zmnh.uni-hamburg.de>",
    "Fabian Hausmann <fabian.hausmann@zmnh.uni-hamburg.de",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
pandas = "^1.3.2"
PyYAML = "^5.4.1"
networkx = "^2.6.3"
UpSetPlot = "^0.6.0"
matplotlib = "^3.4.3"
rpy2 = "^3.4.5"
tqdm = "^4.62.3"
seaborn = "^0.11.2"
papermill = "^2.3.3"
mygene = "^3.2.2"
ipykernel = "^6.4.1"
statsmodels = "^0.13.0"
scikit-learn = "^1.0"
scipy = "^1.7.1"
requests-cache = "^0.9.0"
decoupler = "^1.1.0"
openpyxl = "^3.0.10"
htseq = "^2.0.2"
pyarrow = "^10.0.0"
omnipath = "^1.0.5"
matplotlib-venn = "^0.11.7"
adjusttext = "^0.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0","setuptools>=57.4.0","wheel>=0.37.0"]
build-backend = "poetry.core.masonry.api"
